Text spacing issue

--- a/css/references.css
+++ b/css/references.css
@@ -17,7 +17,7 @@
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 300px;
+  top: 275px;
 }
 
 .secondReference {
@@ -39,7 +39,7 @@
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 600px;
+  top: 575px;
 }
 
 .thirdReference {
@@ -61,7 +61,7 @@
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 700px;
+  top: 875px;
 }
 
 .fourthReference {
